# cookiecutter-streamlit

./: .gitignore  README.md  cookiecutter.json
{{cookiecutter.project_name}}/: .env.sample  .gitignore  .pre-commit-config.yaml  Makefile  README.md  app.py  noxfile.py  pyproject.toml
{{cookiecutter.project_name}}/.devcontainer/: Dockerfile  devcontainer.json  post-install.sh
{{cookiecutter.project_name}}/.github/: dependabot.yml
{{cookiecutter.project_name}}/.github/workflows/: release.yml  tests.yml
{{cookiecutter.project_name}}/.streamlit/: sample.secrets.toml
{{cookiecutter.project_name}}/src/{{cookiecutter.package_name}}/: sf.py
